--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -6,29 +6,29 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_dashboard"
-            android:title="CC Talk"/>
+            android:title="首页"/>
         <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/ic_event"
-            android:title="HJ Class"/>
+            android:title="事项"/>
         <item
             android:id="@+id/nav_friends"
             android:icon="@drawable/ic_headset"
-            android:title="Words"/>
+            android:title="音乐"/>
         <item
             android:id="@+id/nav_discussion"
             android:icon="@drawable/ic_forum"
-            android:title="Big HJ"/>
+            android:title="消息"/>
     </group>
 
-    <item android:title="Version">
+    <item android:title="其他">
         <menu>
             <item
                 android:icon="@drawable/ic_dashboard"
-                android:title="Android"/>
+                android:title="设置"/>
             <item
                 android:icon="@drawable/ic_dashboard"
-                android:title="iOS"/>
+                android:title="关于我们"/>
         </menu>
     </item>
 
