--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="200dp"
+              android:layout_height="150dp"
               android:background="?attr/colorPrimaryDark"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:padding="16dp"
+              android:orientation="horizontal"
               android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="16dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="50dp"
         android:background="@drawable/ic_user"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="XuYisheng"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"
+        android:text="Liuwangshu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="20sp"/>
 
